# mymal

./: .gitmodules  CMakeLists.txt  IMPLS.yml  Makefile  Makefile.impls  README.md  ci.sh  docs  env.hpp  examples  get-ci-matrix.py  lib  printer.cpp  printer.hpp  process  reader.cpp  reader.hpp  runtest.py  step0_repl.cpp  step1_read_print.cpp  step2_eval.cpp  step3_env.cpp  step4_if_fn_do.cpp  tests  types.hpp
impl/cpp17/: core.cpp  reader.hpp
impls/: tests
impls/cmake/: step0_repl.cmake
impls/cpp17/: .gitignore  Makefile  README.md  core.hpp  printer.cpp  printer.hpp  reader.cpp  step1_read_print.cpp  step2_eval.cpp  step3_env.cpp  step4_if_fn_do.cpp  utility.hpp
